--- a/P007/Brasilia.ipynb
+++ b/P007/Brasilia.ipynb
@@ -1878,19 +1878,17 @@
     "dataf['DATA'] = pd.to_datetime(dataf['DATA (YYYY-MM-DD)'])\n",
     "dataf.set_index('DATA', inplace=True)\n",
     "\n",
-    "# Verifique se o índice é do tipo DatetimeIndex\n",
     "if not isinstance(dataf.index, pd.DatetimeIndex):\n",
     "    raise TypeError(\"O índice não é do tipo DatetimeIndex. Verifique a conversão de data e a definição do índice.\")\n",
     "\n",
-    "# Crie as colunas Ano, Mes e Dia\n",
+    "# Criando as colunas Ano, Mes e Dia\n",
     "dataf['Ano'] = dataf.index.year\n",
     "dataf['Mes'] = dataf.index.month\n",
     "dataf['Dia'] = dataf.index.day\n",
     "\n",
-    "# Configure o índice para Ano, Mes e Dia\n",
+    "# Configurando o índice para Ano, Mes e Dia\n",
     "dataf.set_index(['Ano', 'Mes', 'Dia'], inplace=True)\n",
     "\n",
-    "# Exiba o DataFrame resultante\n",
     "print(dataf)\n",
     "\n"
    ]
@@ -2276,16 +2274,16 @@
    ],
    "source": [
     "\n",
-    "# Certifique-se de que 'DATA (YYYY-MM-DD)' seja o nome correto da coluna\n",
+    "\n",
     "dataf['DATA (YYYY-MM-DD)'] = pd.to_datetime(dataf['DATA (YYYY-MM-DD)'], errors='coerce')\n",
     "\n",
-    "# Adicione uma coluna 'Estacao' com base nas estações do ano\n",
+    "# Adicionando uma coluna 'Estacao' com base nas estações do ano\n",
     "dataf['Estacao'] = pd.cut(dataf['DATA (YYYY-MM-DD)'].dt.month,\n",
     "bins=[0, 3, 6, 9, 12],\n",
     "labels=['Verao', 'Outono', 'Inverno', 'Primavera'],\n",
     "right=False)\n",
     "\n",
-    "# Agrupe por 'Ano' e 'Estacao' e calcule as médias\n",
+    "# Agrupando por 'Ano' e 'Estacao' e calcule as médias\n",
     "resultados = dataf.groupby(['Ano', 'Estacao']).agg({'TEMPERATURA DO AR - BULBO SECO, HORARIA (°C)': 'mean', 'PRECIPITAÇÃO TOTAL, HORÁRIO (mm)': 'mean'}).reset_index()\n",
     "\n",
     "print(resultados)\n"
@@ -2334,13 +2332,13 @@
     "# Criando uma nova coluna para representar o intervalo do dia\n",
     "dataf['Intervalo'] = pd.cut(dataf['Datetime'].dt.hour, bins=[0, 6, 12, 18, 24], labels=['Madrugada', 'Manha', 'Tarde', 'Noite'], right=False)\n",
     "\n",
-    "# Filtrar dados para o dia 28 de setembro\n",
+    "# Filtrando dados para o dia 28 de setembro\n",
     "dados_28_setembro = dataf[dataf['Datetime'].dt.day == 28]\n",
     "\n",
-    "# Calcular as médias para cada intervalo do dia\n",
+    "# Calculando as médias para cada intervalo do dia\n",
     "medias_por_intervalo = dados_28_setembro.groupby(['Intervalo']).agg({'TEMPERATURA DO AR - BULBO SECO, HORARIA (°C)': 'mean', 'PRECIPITAÇÃO TOTAL, HORÁRIO (mm)': 'mean'})\n",
     "\n",
-    "# Exibir as médias calculadas\n",
+    "# Exibindo as médias calculadas\n",
     "print(medias_por_intervalo)\n",
     "\n",
     "\n",
